# faiss

./: CMakeLists.txt
faiss/gpu/: GpuCloner.cpp  GpuIndexIVFFlat.cu  GpuIndexIVFFlat.h
faiss/gpu/impl/: IVFFlat.cu
faiss/gpu/test/: test_gpu_index_ivfflat.py  test_index_cpu_to_gpu.py
